--- a/pipeline/variables.sample.yml
+++ b/pipeline/variables.sample.yml
@@ -71,9 +71,9 @@ config_git_repository: git@github.com:MyUser/config-external-workers.git
 #+ Branch of the config git repository.
 config_git_branch: master
 
-#. config_git_private_key (required): ((git_config.ssh_key))
+#. config_git_private_key (required): ((ssh_config.ssh_key))
 #+ SSH key pair to fetch the config git repository.
-config_git_private_key: ((git_config.ssh_key))
+config_git_private_key: ((ssh_config.ssh_key))
 
 
 #
