--- a/extra/local-worker/Dockerfile
+++ b/extra/local-worker/Dockerfile
@@ -1,4 +1,4 @@
 FROM concourse/concourse:5.6.0
 
 COPY entrypoint.sh /
-ENTRYPOINT dumb-init /entrypoint.sh
+ENTRYPOINT ["dumb-init", "/entrypoint.sh"]
