--- a/extra/aws/external-worker-aws-cf-template.yaml
+++ b/extra/aws/external-worker-aws-cf-template.yaml
@@ -45,6 +45,8 @@ Parameters:
     - t2.small
     - t2.medium
     - t2.large
+    - t2.xlarge
+    - t2.2xlarge
     - t3.nano
     - t3.micro
     - t3.small
