ansible: introduce install_user variables
The desired user where to install playbooks is not always the same from
one cloud provider to another or even on a on-prem setup (eg. `admin`
for AWS, `root` for Scaleway).

--- a/ansible/default.yml
+++ b/ansible/default.yml
@@ -10,9 +10,15 @@ cloud_provider: ""
 # Run the mapping/symlink of device via ansible instead of udev. Sould be false if building an ami.
 nvme_mapping_run: false
 
+
 # Cleanup workers at boot
 concourse_service_worker_cleaner_enabled: false
 concourse_service_watchdog_enabled: true
+
+# user's home where playbooks will be run from
+install_user: "{% if ansible_system_vendor == \"Scaleway\" %}root{% else %}admin{% endif %}"
+install_user_group: "{{ install_user }}"
+install_user_home: "{% if install_user == \"root\" %}/root{% else %}/home/{{ install_user }}{% endif %}"
 
 concourse_worker: yes
 # Don't start as we don't want worker to start during the build
