--- a/ansible/default.yml
+++ b/ansible/default.yml
@@ -12,6 +12,7 @@ nvme_mapping_run: false
 
 # Cleanup workers at boot
 concourse_service_worker_cleaner_enabled: false
+concourse_service_watchdog_enabled: true
 
 concourse_worker: yes
 # Don't start as we don't want worker to start during the build
