--- a/ansible/molecule/default/molecule.yml
+++ b/ansible/molecule/default/molecule.yml
@@ -4,20 +4,24 @@ dependency:
   options:
     # vvv: True
     role-file: requirements.yml
+
 driver:
   name: docker
-lint:
-  name: yamllint
-  # https://yamllint.readthedocs.io/en/latest/configuration.html#ignoring-paths
-  options:
-    config-data: "{extends: relaxed, rules: {line-length: {max: 200}}}"
+
+lint: |
+  set -e
+  export ANSIBLE_ROLES_PATH=~/.cache/molecule/ansible/default/roles:~/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles
+  yamllint .
+  ansible-lint --offline
+  flake8
+
 platforms:
   - name: psql
-    image: postgres:9.6.5-alpine
+    image: postgres:12-alpine
     networks:
-    - name: molecule
-      aliases:
-        - psql
+      - name: molecule
+        aliases:
+          - psql
     published_ports:
       - "5432:5432"
     command: "docker-entrypoint.sh postgres"
@@ -27,15 +31,15 @@ platforms:
       POSTGRES_DB: concourse
 
   - name: concourse-web
-    image: concourse/concourse:5.7.2
+    image: concourse/concourse:6.7.1
     volumes:
-      - "/tmp/molecule_test:/opt:ro"
+      - "/tmp/molecule_test:/concourse-keys:ro"
     networks:
-    - name: molecule
-      aliases:
-        - concourse-web
+      - name: molecule
+        aliases:
+          - concourse-web
     links:
-       - "psql:psql"
+      - "psql:psql"
     command: "web"
     published_ports:
       - "2222:2222"
@@ -43,16 +47,13 @@ platforms:
     env:
       CONCOURSE_ADD_LOCAL_USER: concourse:concourse
       CONCOURSE_MAIN_TEAM_LOCAL_USER: concourse
-      CONCOURSE_BIND_PORT: 8080
+      CONCOURSE_BIND_PORT: "8080"
       CONCOURSE_EXTERNAL_URL: "http://localhost:8080"
       CONCOURSE_POSTGRES_HOST: psql
       CONCOURSE_POSTGRES_USER: super
       CONCOURSE_POSTGRES_PASSWORD: concourse
       CONCOURSE_POSTGRES_DATABASE: concourse
       CONCOURSE_CLUSTER_NAME: dev
-      CONCOURSE_TSA_HOST_KEY: /opt/id_rsa
-      CONCOURSE_TSA_AUTHORIZED_KEYS: /opt/id_rsa.pub
-      CONCOURSE_TSA_SESSION_SIGNING_KEY: /opt/id_rsa
 
   - name: instance
     image: debian:stretch
@@ -63,58 +64,57 @@ platforms:
     privileged: yes
     command: "/bin/systemd"
     links:
-       - "concourse-web:concourse-web"
+      - "concourse-web:concourse-web"
     groups:
-     - tag_project_external-worker
-     - tag_role_worker
-     - tag_cycloid_io_true
-     - tag_env_test
+      - tag_project_external-worker
+      - tag_role_worker
+      - tag_cycloid_io_true
+      - tag_env_test
 
 provisioner:
   name: ansible
-
+  # log: True
   env:
     MOLECULE_DEBUG: "true"
     #ANSIBLE_KEEP_REMOTE_FILES: "1"
-  lint:
-    name: ansible-lint
   playbooks:
     converge: ../../external-worker.yml
+  ansible_args:
+    - -e env=test
+    - -e project=external-worker
+    - -e customer=cycloid
+    - -e role=worker
+    - -e var_lib_device=/dev/xvdf
+  inventory:
+    group_vars:
+      localhost:
+        concourse_tsa_host: concourse-web
+        concourse_version: "6.7.1"
+        systemd_mount_device: 'LABEL=ephemeral0'
+        concourse_tsa_public_key: "{{lookup('file', '/tmp/molecule_test/tsa_host_key.pub')}}"
+        concourse_tsa_worker_key: "{{lookup('file', '/tmp/molecule_test/worker_key')}}"
   options:
-    # vault-password-file: ../../.vault-password
-    extra-vars:
-      env: test
-      project: external-worker
-      customer: cycloid
-      role: worker
-      concourse_tsa_host: concourse-web
-      concourse_version: 5.7.2
-      var_lib_device: /dev/xvdf
-      systemd_mount_device: 'LABEL=ephemeral0'
-      concourse_tsa_public_key: "{{lookup('file', '/tmp/molecule_test/id_rsa.pub')}}"
-      concourse_tsa_worker_key: "{{lookup('file', '/tmp/molecule_test/id_rsa')}}"
     connection: ""
-    #skip-tags: molecule-notest
-    #vvv: "True"
-
+    # vault-password-file: ../../.vault-password
+    # skip-tags: molecule-notest
 
 scenario:
   name: default
   # Override test sequence
   test_sequence:
-  #- lint
-  - destroy
-  - dependency
-  - syntax
-  - create
-  - prepare
-  - converge
-  #- idempotence
-  #- side_effect
-  - verify
-  - destroy
+    - dependency
+    - lint
+    - cleanup
+    - destroy
+    - syntax
+    - create
+    - prepare
+    - converge
+    #- idempotence
+    #- side_effect
+    - verify
+    - cleanup
+    - destroy
 
 verifier:
   name: testinfra
-  lint:
-    name: flake8
