ansible: replace btrfs-tools with btrfs-progs
debian: btrfs-tools is a virtual packages pointing to btrfs-progs
ubuntu xenial-updates/bionic: btrfs-progs is a virtual/transition packages pointing to btrfs-tools
ubuntu focal: btrfs-tools doesn't exists anymore, only btrfs-progs

--- a/ansible/external-worker.yml
+++ b/ansible/external-worker.yml
@@ -164,9 +164,9 @@
         name: jq
         state: present
 
-    - name: Install btrfs-tools
+    - name: Install btrfs tools
       apt:
-        name: btrfs-tools
+        name: btrfs-progs
         state: present
       when: fs_volume_type == "btrfs"
 
