ansible: Add new default values for cc 7 upgrade
Related to https://github.com/cycloidio/ansible-concourse/pull/11/files

Add new concourse worker runtime if you want your worker to use containerd instead of gardian
Provide an env var to provide another dns server for workers.
Note: dns behavior depend of the runtime you use.

Remove Garden default values as they are now included in the default role.
And they will differ depending of the worker runtime selected.
(Concourse don't start if you select containerd runtime and provide garden env vars)

--- a/ansible/default.yml
+++ b/ansible/default.yml
@@ -25,15 +25,13 @@ concourse_worker: yes
 concourse_worker_name: "$(hostname)"
 concourse_service_enabled: no
 
+concourse_worker_runtime: "guardian"
+concourse_worker_dns_server: ""
+
 # Get all options available : /var/lib/concourse/bin/gdn server --help
 # CONCOURSE_GARDEN_FOO_BAR=a,b' for '--foo-bar a --foo-bar b'
-concourse_worker_env:
-  CONCOURSE_GARDEN_ASSETS_DIR: "{{ concourse_work_dir }}/garden_assets/"
-  CONCOURSE_GARDEN_DEPOT: "{{ concourse_work_dir }}/garden_depot"
-  CONCOURSE_GARDEN_LOG_LEVEL: "error"
-  CONCOURSE_GARDEN_NETWORK_POOL: "10.254.0.0/16"
-  CONCOURSE_GARDEN_MAX_CONTAINERS: 1024
-  CONCOURSE_GARDEN_ADDITIONAL_DNS_SERVER: "1.1.1.1,1.0.0.1"
+#concourse_worker_env:
+#  CONCOURSE_GARDEN_MAX_CONTAINERS: 1024
 
 concourse_worker_options: "{% if concourse_version is version('5.0', '>=') %}{{ concourse_worker_default_options }}{% else %}{{ concourse_4_worker_default_options }}{% endif %}"
 
