--- a/pipeline/pipeline-aws.yml
+++ b/pipeline/pipeline-aws.yml
@@ -5,7 +5,7 @@ shared:
     config:
       platform: linux
       image_resource:
-        type: docker-image
+        type: registry-image
         source:
           repository: cycloid/cycloid-toolkit
           tag: latest
@@ -26,7 +26,7 @@ shared:
     config:
       platform: linux
       image_resource:
-        type: docker-image
+        type: registry-image
         source:
           repository: cycloid/cycloid-toolkit
           tag: latest
@@ -45,7 +45,7 @@ shared:
   - &merge-stack-and-config
     platform: linux
     image_resource:
-      type: docker-image
+      type: registry-image
       source:
         repository: cycloid/cycloid-toolkit
         tag: latest
@@ -90,13 +90,13 @@ groups:
 
 resource_types:
 - name: terraform
-  type: docker-image
+  type: registry-image
   source:
     repository: ljfranklin/terraform-resource
     tag: ((terraform_version))
 
 - name: packer
-  type: docker-image
+  type: registry-image
   source:
     # repository: snapkitchen/concourse-packer-resource
     repository: cycloid/concourse-packer-resource
